# silica-irc

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: GTest.cmake  macros.cmake
src/: CMakeLists.txt  silica.cpp  silica.h
src/client/: CMakeLists.txt  client.cpp  client.h  context_state.cpp  context_state.h  hooks.h  server_context.cpp  server_context.h
src/common/: CMakeLists.txt  error.cpp  error.h  time.cpp  time.h
src/io/: CMakeLists.txt  io_base.cpp  io_base.h  io_events.cpp  io_events.h  io_file.cpp  io_file.h  io_manager.cpp  io_manager.h  io_ref.h  io_results.cpp  io_results.h  io_thread.cpp  io_thread.h
src/io/sockets/: CMakeLists.txt  io_socket.cpp  io_socket.h  io_socket_detail_tcp4.cpp  io_socket_detail_tcp4.h  io_socket_detail_tcp6.cpp  io_socket_detail_tcp6.h  io_socket_impl.cpp  io_socket_impl.h  io_socket_types.cpp  io_socket_types.h
src/protocol/: CMakeLists.txt  commands.cpp  commands.h  deserialize.cpp  deserialize.h  numeric.cpp  numeric.h  protobase.cpp  protobase.h  prototype.cpp  prototype.h
src/sockets/: CMakeLists.txt  socket_thread.cpp  socket_thread.h  socket_wrapper.cpp  socket_wrapper.h
test/: CMakeLists.txt
test/common/: CMakeLists.txt  test_error.cpp
test/io/: CMakeLists.txt  test_io_file.cpp  test_io_manager.cpp
test/io/sockets/: CMakeLists.txt  test_io_thread.cpp  test_socket_io.cpp
test/protocol/: CMakeLists.txt  test_protocol_commands.cpp
test/sockets/: CMakeLists.txt  test_socket_wrapper.cpp
